# musicmood-analyzer

./: README.md  main.py  musicmood.db  pyproject.toml
src/: database.py  lyrics_fetcher.py  musicmood.py  sentiment_analyzer.py
